--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon app",
     "start": "cross-env NODE_ENV=production pm2 start app.js"
   },
   "author": "root",
