--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@next/bundle-analyzer": "^11.0.1",
     "antd": "^4.16.3",
     "axios": "^0.21.1",
